Update UI Dashboard, Add JFrame and Update Information.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/RoomAssignmentManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.swing-time-picker.jar=C:\\Users\\solve\\Downloads\\swing-time-picker.jar
+file.reference.TimingFramework-0.55.jar=C:\\Users\\solve\\Downloads\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.swing-time-picker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
