added combo box for update.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,11 @@ dist.jar=${dist.dir}/RoomAssignmentManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-11.2.1.jre11.jar=mssql-jdbc-11.2.1.jre11.jar
+file.reference.mssql-jdbc-11.2.1.jre17.jar=mssql-jdbc-11.2.1.jre17.jar
 file.reference.mssql-jdbc-11.2.1.jre18.jar=D:\\Program Files\\sqljdbc_11.2.1.0_enu\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.1.jre18.jar
+file.reference.mssql-jdbc-11.2.1.jre18.jar-1=mssql-jdbc-11.2.1.jre18.jar
+file.reference.mssql-jdbc-11.2.1.jre8.jar=mssql-jdbc-11.2.1.jre8.jar
 file.reference.swing-time-picker.jar-1=swing-time-picker.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
@@ -42,7 +46,11 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.swing-time-picker.jar-1}:\
     ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.mssql-jdbc-11.2.1.jre18.jar}
+    ${file.reference.mssql-jdbc-11.2.1.jre18.jar}:\
+    ${file.reference.mssql-jdbc-11.2.1.jre18.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.1.jre11.jar}:\
+    ${file.reference.mssql-jdbc-11.2.1.jre17.jar}:\
+    ${file.reference.mssql-jdbc-11.2.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
