added notify, and revise other components.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/RoomAssignmentManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jnotify.jar=jnotify.jar
 file.reference.mssql-jdbc-11.2.1.jre11.jar=mssql-jdbc-11.2.1.jre11.jar
 file.reference.mssql-jdbc-11.2.1.jre17.jar=mssql-jdbc-11.2.1.jre17.jar
 file.reference.mssql-jdbc-11.2.1.jre18.jar=D:\\Program Files\\sqljdbc_11.2.1.0_enu\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.1.jre18.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.1.jre18.jar-1}:\
     ${file.reference.mssql-jdbc-11.2.1.jre11.jar}:\
     ${file.reference.mssql-jdbc-11.2.1.jre17.jar}:\
-    ${file.reference.mssql-jdbc-11.2.1.jre8.jar}
+    ${file.reference.mssql-jdbc-11.2.1.jre8.jar}:\
+    ${file.reference.jnotify.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
