--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=RoomAssignmentManagementSystem
 application.vendor=User
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -34,24 +35,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jnotify.jar=jnotify.jar
-file.reference.mssql-jdbc-11.2.1.jre11.jar=mssql-jdbc-11.2.1.jre11.jar
-file.reference.mssql-jdbc-11.2.1.jre17.jar=mssql-jdbc-11.2.1.jre17.jar
 file.reference.mssql-jdbc-11.2.1.jre18.jar=D:\\Program Files\\sqljdbc_11.2.1.0_enu\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.1.jre18.jar
 file.reference.mssql-jdbc-11.2.1.jre18.jar-1=mssql-jdbc-11.2.1.jre18.jar
-file.reference.mssql-jdbc-11.2.1.jre8.jar=mssql-jdbc-11.2.1.jre8.jar
 file.reference.swing-time-picker.jar-1=swing-time-picker.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.swing-time-picker.jar-1}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.mssql-jdbc-11.2.1.jre18.jar}:\
     ${file.reference.mssql-jdbc-11.2.1.jre18.jar-1}:\
-    ${file.reference.mssql-jdbc-11.2.1.jre11.jar}:\
-    ${file.reference.mssql-jdbc-11.2.1.jre17.jar}:\
-    ${file.reference.mssql-jdbc-11.2.1.jre8.jar}:\
     ${file.reference.jnotify.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -84,7 +81,24 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=RoomAssignmentManagementSystem
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=RoomAssignment.Signin_Signout
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
